[workspace]

members = [
  "domain_derive",
  "fkl_cli",
  "fkl_lsp",
  "fkl_parser",
  "fkl_parser_wasm",
  "fkl_dot",
  "fkl_codegen_java",
  # for codegen
  "extensions/codegen-aws-lambda",
  # for swagger
  "extensions/sourceset-swagger",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
