[workspace]

members = [
  "domain_derive",
  "fkl_cli",
  "fkl_lsp",
  "fkl_mir",
  "fkl_parser",
  "fkl_parser_wasm",
  # codegen
  "fkl_dot",
  "fkl_codegen_java",
  # extension
  "fkl_ext_api",
  "fkl_ext_loader",
  # for codegen
  "extensions/codegen-aws-lambda",
  # for swagger
  "extensions/sourceset-swagger",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
