[workspace]

members = [
  "fkl_cli",
  "fkl_lsp",
  "fkl_mir",
  "fkl_parser",
  "fkl_parser_wasm",
  # codegen
  "fkl_codegen_dot",
  "fkl_codegen_java",
  # extension
  "fkl_ext_api",
  "fkl_ext_loader",
  # for codegen
  "extensions/*",
  "examples/*",

  # for ci copy and build and zip
  "scripts/ext-builder"
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
