[package]
name = "fkl_cli"
version = "0.2.2"
authors = ["Phodal Huang <h@phodal.com>"]
description = "Feakin is a architecture design and visual collaboration tool. This is the parser for Feakin."
repository = "https://github.com/feakin/fklang"
categories = ["command-line-interface", "parsing"]
keywords = [
  "architecture",
  "parser"
]
license = "MPL-2.0"
edition = "2021"
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[dependencies]
clap = { version = "4.0.0-rc.3", features = ["derive", "cargo"] }

# code highlight
syntect = "5.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

fkl-parser = { path = "../fkl_parser", version = "0.2.2" }
fkl_codegen_java = { path = "../fkl_codegen_java", version = "0.2.2" }

tree-sitter = "=0.19.3"
tree-sitter-java = "0.19.0"

# logging
log = "0.4.0"
env_logger = "0.9.0"

# http for mock and verify api
reqwest = { version = "0.11", features = ["blocking", "json"] }

[[bin]]
name = "fkl"
path = "src/main.rs"
