[package]
name = "fkl_cli"
version = "0.2.3"
authors = ["Phodal Huang <h@phodal.com>"]
description = "Feakin is a architecture design and visual collaboration tool. This is the parser for Feakin."
repository = "https://github.com/feakin/fklang"
categories = ["command-line-interface", "parsing"]
keywords = [
  "architecture",
  "parser"
]
license = "MPL-2.0"
edition = "2021"
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[dependencies]
clap = { version = "4.0.0-rc.3", features = ["derive", "cargo"] }

# code highlight
syntect = "5.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

fkl-parser = { path = "../fkl_parser", version = "0.2.2" }
fkl_codegen_java = { path = "../fkl_codegen_java", version = "0.2.2" }

# code ident
tree-sitter = "=0.19.3"
tree-sitter-java = "0.19.0"
walkdir = "2"

# logging
log = "0.4.0"
env_logger = "0.9.0"

regex = "1.6.0"

# http for mock and verify api
reqwest = { version = "0.11", features = ["blocking", "json"] }
# base64 ecnode/decode
base64 = "0.13.0"

[dev-dependencies]
trycmd = "0.14.0"

[[bin]]
name = "fkl"
path = "src/main.rs"
