[package]
name = "fkl_cli"
version = "0.3.0"
authors = ["Phodal Huang <h@phodal.com>"]
description = "Feakin is a architecture design and visual collaboration tool. This is the parser for Feakin."
repository = "https://github.com/feakin/fklang"
categories = ["command-line-interface", "parsing"]
keywords = [
  "architecture",
  "parser"
]
license = "MPL-2.0"
edition = "2021"
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[dependencies]
clap = { version = "4.0.0-rc.3", features = ["derive", "cargo"] }

# code highlight
syntect = "5.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

fkl-parser = { path = "../fkl_parser", version = "0.3.0" }
fkl_codegen_java = { path = "../fkl_codegen_java", version = "0.3.0" }

# code ident
tree-sitter = "=0.19.3"
tree-sitter-java = "0.19.0"

# The ignore crate provides a fast recursive directory iterator that respects various filters such as globs, file types and .gitignore files.
ignore = "0.4"

# logging
log = "0.4.0"
env_logger = "0.9.0"

colored = "2.0.0"

regex = "1.6.0"

# http for mock and verify api
reqwest = { version = "0.11", features = ["blocking", "json"] }
# base64 ecnode/decode
base64 = "0.13.0"

# database connection

# mysql & postres
sqlx = { version = "0.6", features = [
  "runtime-tokio-native-tls", # tls
  "postgres", "mysql", # db
  "chrono", "bigdecimal", "uuid", "json", "ipnetwork", "mac_address", "bit-vec",
  "offline"
] }

# microsoft sql server
#tiberius = { version = "0.11" }
#oracle = { version = "0.5" }
futures = "0.3"
tokio = { version = "1", features = ["full"] }

async-trait = "0.1.58"

# http server
rocket = { version = "0.5.0-rc.2", features = ["json"] }
figment = { version = "0.10" }
# type for uuid
uuid = { version = "1.2.1", features = ["v4"] }
phf = { version = "0.11", features = ["macros"] }
indexmap = "1.9.1"
chrono = "0.4"
rand = "0.8.5"

[dev-dependencies]
trycmd = "0.14.0"

[[bin]]
name = "fkl"
path = "src/main.rs"
