[package]
name = "fkl_codegen_dot"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"
description = "Feakin is a architecture design and visual collaboration tool. This is the parser for Feakin."
repository = "https://github.com/feakin/fklang"
license = "MPL-2.0"

[dependencies]
#domain_derive = { path = "../domain_derive" }
