[package]
name = "fkl_codegen_java"
version = "0.2.0"
authors = ["Phodal Huang <h@phodal.com>"]
description = "Feakin is a architecture design and visual collaboration tool. This is the parser for Feakin."
repository = "https://github.com/feakin/feakin/"
categories = ["command-line-interface", "parsing"]
keywords = [
  "architecture",
  "parser"
]
license = "MPL-2.0"
edition = "2021"
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[dependencies]
genco = "0.17.2"
anyhow = "1.0.31"

rust-stemmers = "1.2.0"

fkl-parser = { path = "../fkl_parser", version = "0.2.0" }
