[package]
name = "fkl_ext_api"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>" ]
description = "Feakin is a architecture design and visual collaboration tool. This is the parser for Feakin."
repository = "https://github.com/feakin/fklang"
categories = ["command-line-interface", "parsing"]
keywords = [
  "architecture",
  "parser"
]
license = "MPL-2.0"
edition = "2021"
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[dependencies]
downcast-rs = "1.2.0"
async-trait = "0.1.58"

fkl_mir = { path = "../fkl_mir", version = "0.4.0" }
