[package]
name = "fkl_ext_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fkl-mir = { path = "../fkl_mir", version = "0.4.0" }

fkl_ext_api = { path = "../fkl_ext_api", version = "0.1.0" }

libloading = { version = "0.7" }
thiserror = "1.0"

