[package]
name = "fkl_ext_loader"
version = "0.4.0"
authors = ["Phodal Huang <h@phodal.com>" ]
description = "Feakin is a architecture design and visual collaboration tool. This is the parser for Feakin."
repository = "https://github.com/feakin/fklang"
categories = ["command-line-interface", "parsing"]
keywords = [
  "architecture",
  "parser"
]
license = "MPL-2.0"
edition = "2021"
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[dependencies]
fkl_mir = { path = "../fkl_mir", version = "0.4.0" }

fkl_ext_api = { path = "../fkl_ext_api", version = "0.4.0" }

libloading = { version = "0.7" }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
