[package]
name = "fkl-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
fkl-parser = { path = "../fkl_parser", version = "0.2.0" }

lsp = { version = "0.93", package = "lsp-types" }
lsp-text = { version = "0.9", features = ["tree-sitter"] }
tree-sitter = { version = "0.9", package = "tree-sitter-facade" }

chumsky = "0.8.0"
env_logger = "0.9"
ropey = "1.0"
serde_json = "1.0"
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["compat"], optional = true }
tower-lsp = { version = "0.17.0"}
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.4"
log = "0.4"
im-rc = "15.0"

[features]
platform-agnostic = ["tokio-util"]
