[package]
name = "fkl_wasm"
version = "0.4.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"
description = "Feakin is a architecture design and visual collaboration tool. This is the parser for Feakin."
repository = "https://github.com/feakin/fklang"
license = "MPL-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.81"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

fkl_mir = { path = "../fkl_mir", version = "0.4.0" }
fkl_parser = { path = "../fkl_parser", version = "0.4.0" }
fkl_codegen_dot = { path = "../fkl_codegen_dot", version = "0.1.0" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
