[package]
name = "fkl_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.0-rc.3", features = ["derive", "cargo"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

fkl-parser = { path = "../fkl_parser" }
