[package]
name = "ext_message_kafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fkl_ext_api = { path = "../../fkl_ext_api", version = "0.1.0" }
fkl-mir = { path = "../../fkl_mir", version = "0.4.0" }

async-trait = "0.1.58"

rdkafka = { version = "0.29.0", features = ["cmake-build"] }


[lib]
crate-type = ["cdylib"]
