[package]
name = "fkl-codegen-aws"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>" ]
description = "Feakin is a architecture design and visual collaboration tool. This is the parser for Feakin."
repository = "https://github.com/feakin/fklang"
categories = ["command-line-interface", "parsing"]
keywords = [
  "architecture",
  "parser"
]
license = "MPL-2.0"
edition = "2021"
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[dependencies]
