[package]
name = "fkl-ext-computing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fkl_ext_api = { path = "../../fkl_ext_api", version = "0.1.0" }
fkl-mir = { path = "../../fkl_mir", version = "0.4.0" }

salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022" }
#crossbeam-channel = "0.5.6"
#dashmap = "5.4.0"
