[package]
name = "fkl_ext_computing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fkl_ext_api = { path = "../../fkl_ext_api", version = "0.1.0" }
fkl_mir = { path = "../../fkl_mir", version = "0.4.0" }

salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022" }

[dev-dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
futures = "0.3.18"
exprtk_rs="0.1.0"

#pest = "2.3.1"
#pest_derive = "2.3.1"
#
#lazy_static = "1.4.0"
